// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Join Form: Complete Registration 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "creation_params": Object {},
        "email": "test-email@example.com",
        "first_name": "Firsty",
        "last_name": "Lasty",
        "password": "test-password",
        "recaptcha_response": "test-recaptcha-response",
        "recaptcha_type": "invisible",
        "salesforce_data": Object {
          "email_opt_out": true,
        },
        "sfdcid": undefined,
        "tou_accepted": true,
      },
      "headers": undefined,
      "method": "post",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/account",
    },
  ],
  Array [
    Object {
      "data": "grant_type=password&username=test-username&password=test-password&rememberMe=false",
      "headers": Object {
        "Authorization": "Basic bXN5c1dlYlVJOmZhODZkNzJlLTYyODctNDUxMy1hZTdmLWVjOGM4ZmEwZDc2Ng==",
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "url": "/v1/authenticate",
    },
  ],
  Array [
    Object {
      "data": "grant_type=password&username=test-username&password=test-password&rememberMe=false",
      "headers": Object {
        "Authorization": "Basic bXN5c1VJTGltaXRlZDphZjE0OTdkYS02NjI5LTQ3NTEtODljZS01ZDBmODE4N2MyMDQ=",
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "url": "/v1/authenticate",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "GET",
      "url": "/v1/users/test-username/two-factor",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": Object {},
      "responseType": "json",
      "url": "/v1/account",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/account/plans",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/users/test-username",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": Object {
        "beta": false,
        "role": "admin",
      },
      "responseType": "json",
      "url": "/v1/authenticate/grants",
    },
  ],
]
`;

exports[`Join Form: Complete Registration w/ email opt-in 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "creation_params": Object {},
        "email": "test-email@example.com",
        "first_name": "Firsty",
        "last_name": "Lasty",
        "password": "test-password",
        "recaptcha_response": "test-recaptcha-response",
        "recaptcha_type": "invisible",
        "salesforce_data": Object {
          "email_opt_out": false,
        },
        "sfdcid": undefined,
        "tou_accepted": true,
      },
      "headers": undefined,
      "method": "post",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/account",
    },
  ],
  Array [
    Object {
      "data": "grant_type=password&username=test-username&password=test-password&rememberMe=false",
      "headers": Object {
        "Authorization": "Basic bXN5c1dlYlVJOmZhODZkNzJlLTYyODctNDUxMy1hZTdmLWVjOGM4ZmEwZDc2Ng==",
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "url": "/v1/authenticate",
    },
  ],
  Array [
    Object {
      "data": "grant_type=password&username=test-username&password=test-password&rememberMe=false",
      "headers": Object {
        "Authorization": "Basic bXN5c1VJTGltaXRlZDphZjE0OTdkYS02NjI5LTQ3NTEtODljZS01ZDBmODE4N2MyMDQ=",
        "Content-Type": "application/x-www-form-urlencoded",
      },
      "method": "POST",
      "url": "/v1/authenticate",
    },
  ],
  Array [
    Object {
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "GET",
      "url": "/v1/users/test-username/two-factor",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": Object {},
      "responseType": "json",
      "url": "/v1/account",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/account/plans",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": undefined,
      "responseType": "json",
      "url": "/v1/users/test-username",
    },
  ],
  Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Authorization": "mock-access-token",
      },
      "method": "get",
      "params": Object {
        "beta": false,
        "role": "admin",
      },
      "responseType": "json",
      "url": "/v1/authenticate/grants",
    },
  ],
]
`;
